--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,10 @@ buildscript {
         google()
         jcenter()
         mavenCentral()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
         
     }
     dependencies {
@@ -22,6 +26,10 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
         
     }
 }
